$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-05-24 [C] Added line breaks for meta navigation (thread ID 56888) {GauGau}
2009-09-24 [O] Backported browser and client OS detection function from cpg1.5.x for granular stats {GauGau}
2009-09-24 [B] Added code for correct keyword separation in keyword meta tag (thread ID 56873) {GauGau}
2009-05-24 [O] Updated Georgian language file (user contribution) {GauGau}
2009-05-23 [B] Updated previous security fix to avoid causing an infinite loop in PHP 4.3 {Nibbler}
2009-05-23 [O] Updated Finnish language file (user contribution) {GauGau}
2009-05-23 [O] Updated Italian language file (user contribution) {GauGau}
2009-05-21 [M] Updated version count from cpg1.4.23 to cpg1.4.24 in subversion repository as a preparation for a possible future release {GauGau}
2009-05-21 [M] Release of cpg1.4.23 {GauGau}
2009-05-20 [M] Added a warning message for admin if register_globals is on {Abbas}
2009-05-19 [S] Fixing http://www.milw0rm.com/exploits/8713 {Nibbler}
2009-05-18 [O] Updated Italian language file (user contribution) {GauGau}
2009-05-19 [B] Add PHP 5.3 support to debugger {Nibbler}
2009-05-01 [M] Updated version count from cpg1.4.22 to cpg1.4.23 in subversion repository as a preparation for a possible future release {GauGau}
2009-04-30 [M] Release of cpg1.4.22 {GauGau}
2009-04-29 [B] Fixed improper ban expirations due to time offset being incorrectly applied (thread ID 55464) {Paver}
2009-04-29 [S] Fixed XSS vulnerability in showdoc.php (thread ID 59237) {Nibbler}
2009-04-23 [B] Increased maxlength for password field in user manager from 8 to 25 to match the limits elsewhere {Nibbler}